test/apps/errors/__sapper__/dev/client/throw.5e6c3bf9.js
import { c as SvelteComponentDev, d as init, b as safe_not_equal, a as noop } from './chunk.035fae03.js';

/* src/routes/throw.svelte generated by Svelte v3.2.2 */

function create_fragment(ctx) {
	return {
		c: noop,
		l: noop,
		m: noop,
		p: noop,
		i: noop,
		o: noop,
		d: noop
	};
}

function preload() {
	throw new Error('nope');
}

class Throw extends SvelteComponentDev {
	constructor(options) {
		super(options);
		init(this, options, null, create_fragment, safe_not_equal, []);
	}
}

export default Throw;
export { preload };
